@@ -11,4 +11,19 @@ Test
 
 ## Guide
 
-Test
+### Installation
+1. Cloner le repo
+   ```sh
+   git clone https://github.com/Wirbelwind03/CYnaspe.git
+   ```
+2. Aller dans le répertoire
+3. Compiler le projet Java
+   #### Window
+  ```sh
+  javac --module-path "path to javafx" --add-modules javafx.controls,javafx.fxml -d out -sourcepath src src\Main.java
+  ```
+4. Executer le projet Java
+   #### Window
+  ```sh
+  java --module-path "path to javafx" --add-modules javafx.controls,javafx.fxml -cp out Main
+  ```
